# rust-backend-course-one

./: Cargo.toml  README.md  RustBackendCourseOne.postman_collection.json  SQL code.txt
src/: db.rs  main.rs  models.rs
src/api/: mod.rs  mysqlapi.rs
src/db/: database.rs
src/models/: incoming.rs  mod.rs  outgoing.rs  products.rs  reservations.rs  salesorder.rs  wposition.rs
