[package]
name = "backend-api-ras"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
async-trait = "0.1.77"
derive_more = "0.99.17"
json = "0.12.4"
mysql_async = "0.34.1"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.113"
validator = {version = "0.17.0", features = ["derive"]}
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"


